<resources>
    <string name="app_name">DSMP</string>
    <string name="action_settings">Settings</string>

    <string name="work_intro_paragraph">I am primarily a student at University of California, San Diego. This does not give me much time during the school year to gain any relevant working experience. That being said, I have worked during the summers during my college career to develop my software development skills.</string>
    <string name="work_ibm_paragraph">Currently In Progress</string>
    <string name="work_idtech_paragraph">As the C++ Instructor, I was responsible for teaching groups of 6-8 students the basics of C++. This required an extensive knowledge of the language in order to handle any questions about it. The course primarily focused on the principles of object oriented programming.</string>


    <string name="education_bachelors">Expected Graduation Date 2018. \nBachelor of Science in Mathematics/Computer Science. \nGPA: 3.2</string>
    <string name="education_coursework">Advanced Data Structures\nSoftware Engineering\nDesign and Analysis of Algorithms\nObject Oriented Programming: Java\nSoftware Tools and Techniques\nComputer Organization and Systems Programming</string>

    <string name="about_me_activities">Triton Athletic Council Representative\nNCAA Div 1 Fencing Team Member\nJunior Olympic Competitor 2011, 2012, 2013</string>
    <string name="about_me_volunteer">Sound and Display Technician at Evergreen Valley United Methodist Church</string>
    <string name="about_me_contact">Phone Number\n    (408)981-4521\nEmail\n    thefryingphan@gmail.com</string>

    <string name="project_title_tritontag">Triton Tag</string>
    <string name="project_title_pidgeycalc">PidgeyCalc</string>

    <string name="tritontag_information">Software that implements a SkipList to keep track of the players in a game of TritonTag. Used by the UC San Diego Athletic Department for official games of TritonTag for over 500 people. For more information, see the code on Github by hitting the button.</string>
    <string name="pidgeycalc_information">App that functions as a supplement to Pokemon GO. A modified calculator to keep track of evolving pidgeys. For more information, see the code on Github by hitting the button.</string>


</resources>
