<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/work_activity_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:text="Work Experience" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/work_activity_title_view"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:text="@string/work_intro_paragraph" />

    <TextView
        android:id="@+id/section_1_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_title"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:text="2017: IBM Software Development Intern"/>

    <TextView
        android:id="@+id/section_1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_1_header"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:text="@string/work_ibm_paragraph"/>


    <TextView
        android:id="@+id/section_2_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_1_text"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:text="2016: iDTech C++ Instructor"/>

    <TextView
        android:id="@+id/section_2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_2_header"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:text="@string/work_idtech_paragraph"/>

</RelativeLayout>