<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/generic1">

    <TextView
        android:id="@+id/about_me_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="35sp"
        android:text="About Me"/>

    <TextView
        android:id="@+id/activities_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_me_header"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:text="Activities"/>

    <TextView
        android:id="@+id/activities_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activities_header"
        android:layout_marginLeft="60dp"

        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="@string/about_me_activities"/>

    <TextView
        android:id="@+id/volunteer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activities_text"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="Volunteer Work"/>

    <TextView
        android:id="@+id/volunteer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/volunteer_header"
        android:layout_marginLeft="60dp"

        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="@string/about_me_volunteer"/>

    <TextView
        android:id="@+id/contact_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/volunteer_text"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="Contact Information"/>

    <TextView
        android:id="@+id/contact_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_header"
        android:layout_marginLeft="60dp"

        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:text="@string/about_me_contact"/>

</RelativeLayout>